Fix wrap overflow for words

--- a/resources/assets/styles/layouts/_posts.scss
+++ b/resources/assets/styles/layouts/_posts.scss
@@ -104,8 +104,9 @@
   }
 
   & > * {
-    @apply px-4 leading-8 pb-4 break-all;
+    @apply px-4 leading-8 pb-4 break-words;
 
+    word-break: break-word;
     flex-basis: 100%;
     margin: 0 15rem;
   }
